--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
 #Wed Aug 20 10:40:26 CEST 2014
 app.grails.version=2.4.3
-app.name=uSpread-Server
+app.name=uSpread-Core
 app.version=0.1
