--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@
 #Fichier inutile
 web-app/WEB-INF/tld/c.tld
 web-app/WEB-INF/tld/fmt.tld
-.idea
+.idea/*
 !.idea/runConfigurations/
 !.idea/runConfigurations/*
 *.iml
