--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,17 @@
-# .gitignore for Grails 1.2 and 1.3
-
-# web application files
-/web-app/WEB-INF/classes
-
-# default HSQL database files for production mode
-/prodDb.*
-
-# general HSQL database files
-*Db.properties
-*Db.script
-
-# logs
-/stacktrace.log
-/test/reports
-/logs
-
-# project release file
-/*.war
-
-# plugin release files
-/*.zip
-/plugin.xml
-
-# older plugin install locations
-/plugins
-/web-app/plugins
-
-# "temporary" build files
-/target
-/classes
-
-#IDE user settings
-/.idea/workspace.xml
-/.settings
+Thumbs.db
+.asscache
 .classpath
-.project
-
-#Fichier inutile
-web-app/WEB-INF/tld/c.tld
-web-app/WEB-INF/tld/fmt.tld
-.idea/*
-!.idea/runConfigurations/
-!.idea/runConfigurations/*
+.DS_Store
+.gradle
+#.idea
 *.iml
-
-#heroku
+*.ipr
 *.iws
+*.log
+.project
+.settings
+bin/
+build/
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
