--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
+    provided "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
 
@@ -74,8 +74,6 @@ dependencies {
     runtime "postgresql:postgresql:8.4-702.jdbc3"
     runtime "org.hibernate:hibernate-validator:5.0.3.Final"
     
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
-
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testCompile "com.github.groovy-wslite:groovy-wslite:0.7.2"
@@ -84,6 +82,9 @@ dependencies {
     testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
 
     console "org.grails:grails-console"
+    
+    //compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20160115'
+    compile 'com.github.jsimone:webapp-runner:8.0.30.1'
 }
 
 task wrapper(type: Wrapper) {
@@ -101,4 +102,14 @@ tasks.stage.doLast() {
     delete fileTree(dir: "build/libs", exclude: "*.war")
 }
 war.mustRunAfter clean
+
+// Pour récuperer le webapp-runner que Heroku requiert
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
 
