--- a/build.gradle
+++ b/build.gradle
@@ -83,8 +83,8 @@ dependencies {
 
     console "org.grails:grails-console"
     
-    //compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20160115'
-    compile 'com.github.jsimone:webapp-runner:8.0.30.1'
+    compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20150529'
+    compile 'com.github.jsimone:webapp-runner:7.0.57.2'
 }
 
 task wrapper(type: Wrapper) {
