--- a/build.gradle
+++ b/build.gradle
@@ -61,18 +61,9 @@ dependencies {
     compile "org.grails.plugins:hibernate"
     compile "org.grails.plugins:cache"
     compile "org.hibernate:hibernate-ehcache"
-    compile "org.grails.plugins:scaffolding"
     
-    compile 'org.grails.plugins:spring-security-core:3.0.0.M1'
-    
-    // Push iOS et Android
-    compile "com.notnoop.apns:apns:1.0.0.Beta4"
-    compile "com.ganyo:gcm-server:1.0.2"
-
+    runtime "org.grails.plugins:scaffolding"
     runtime "org.grails.plugins:asset-pipeline"
-    
-    runtime "postgresql:postgresql:8.4-702.jdbc3"
-    runtime "org.hibernate:hibernate-validator:5.0.3.Final"
     
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
@@ -83,8 +74,17 @@ dependencies {
 
     console "org.grails:grails-console"
     
+    runtime "org.hibernate:hibernate-validator:5.0.3.Final"
+    compile 'org.grails.plugins:spring-security-core:3.0.3'
+    
+    // utile pour la Prod Heroku uniquement
+    runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
     compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20150529'
     compile 'com.github.jsimone:webapp-runner:7.0.57.2'
+    
+    // Push iOS et Android
+    compile "com.notnoop.apns:apns:1.0.0.Beta4"
+    compile "com.ganyo:gcm-server:1.0.2"
 }
 
 task wrapper(type: Wrapper) {
@@ -103,13 +103,12 @@ tasks.stage.doLast() {
 }
 war.mustRunAfter clean
 
-// Pour récuperer le webapp-runner que Heroku requiert
+// Pour récuperer le webapp-runner que Heroku requiert et utilise comme vu dans le Procfile
 task copyToLib(type: Copy) {
     into "$buildDir/server"
     from(configurations.compile) {
         include "webapp-runner*"
     }
 }
-
 stage.dependsOn(copyToLib)
 
