--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -126,20 +126,24 @@ environments:
             url: jdbc:postgresql://ec2-46-137-72-123.eu-west-1.compute.amazonaws.com:5432/d428sua6tv2t3c
             username: flhfdphnpvipkn
             password: RbAYHQ-Vb0YYlRnDfGF_asXpff
-            maxActive: 20
-            initialSize: 1
-            minIdle: 1
-            maxIdle: 25
-            maxWait: 10000
-            validationQuery: SELECT 1
-            validationQueryTimeout: 3
-            validationInterval: 15000
-            testOnBorrow: true
-            testWhileIdle: true
-            testOnReturn: true
-            minEvictableIdleTimeMillis: 1800000
-            timeBetweenEvictionRunsMillis: 1800000
-            numTestsPerEvictionRun: 3
+            properties:
+                jmxEnabled: true
+                initialSize: 1
+                maxActive: 20
+                minIdle: 1
+                maxIdle: 25
+                maxWait: 10000
+                maxAge: 600000
+                timeBetweenEvictionRunsMillis: 5000
+                minEvictableIdleTimeMillis: 60000
+                validationQuery: SELECT 1
+                validationQueryTimeout: 3
+                validationInterval: 15000
+                testOnBorrow: true
+                testWhileIdle: true
+                testOnReturn: false
+                jdbcInterceptors: ConnectionState
+                defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
 
 #Spring Security Core plugin config (https://grails-plugins.github.io/grails-spring-security-core/guide/single.html) :
 grails:
