--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -123,9 +123,9 @@ environments:
             dbCreate: update
             dialect: org.hibernate.dialect.PostgreSQLDialect
             driverClassName: org.postgresql.Driver
-            url: jdbc:postgresql://ec2-46-137-72-123.eu-west-1.compute.amazonaws.com:5432/d428sua6tv2t3c
-            username: flhfdphnpvipkn
-            password: RbAYHQ-Vb0YYlRnDfGF_asXpff
+            url: jdbc:postgresql://ec2-79-125-120-89.eu-west-1.compute.amazonaws.com:5432/d6sor2co1jj1c
+            username: lflnpefbawxnzq
+            password: jM5NEY3t0_OXKnrjZlAwup92sk
             properties:
                 jmxEnabled: true
                 initialSize: 1
