--- a/build.gradle
+++ b/build.gradle
@@ -6,36 +6,25 @@ buildscript {
         mavenLocal()
         maven { url "https://repo.grails.org/grails/core" }
     }
-    dependencies {        
+    dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.5.0'
-        classpath "org.grails.plugins:hibernate:4.3.10.5"
+        classpath "org.grails.plugins:hibernate4:5.0.0"
+        classpath "org.grails.plugins:views-gradle:1.0.0"
     }
 }
 
-plugins {
-    id "io.spring.dependency-management" version "0.5.2.RELEASE"
-}
-
-version "0.1"
+version "0.8"
 group "it.uspread"
 
-apply plugin: "spring-boot"
+apply plugin: "eclipse"
+apply plugin: "idea"
 apply plugin: "war"
-apply plugin: "asset-pipeline"
-apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: "org.grails.grails-web"
 apply plugin: "org.grails.grails-gsp"
 
 ext {
     grailsVersion = project.grailsVersion
     gradleWrapperVersion = project.gradleWrapperVersion
-}
-
-assets {
-    minifyJs = true
-    minifyCss = true
 }
 
 repositories {
@@ -54,37 +43,46 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "org.springframework.boot:spring-boot-autoconfigure"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-dependencies"
+    compile "org.grails:grails-core"
     compile "org.grails:grails-web-boot"
+    compile "org.grails:grails-logging"
 
-    compile "org.grails.plugins:hibernate"
+    compile "org.grails:grails-plugin-url-mappings"
+    compile "org.grails:grails-plugin-rest"
+    compile "org.grails:grails-plugin-codecs"
+    compile "org.grails:grails-plugin-interceptors"
+    compile "org.grails:grails-plugin-services"
+    compile "org.grails:grails-plugin-datasource"
+    compile "org.grails:grails-plugin-databinding"
+    compile "org.grails:grails-plugin-async"
     compile "org.grails.plugins:cache"
+    compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
     
-    runtime "org.grails.plugins:scaffolding"
-    runtime "org.grails.plugins:asset-pipeline"
+    console "org.grails:grails-console"
+    profile "org.grails.profiles:rest-api:3.1.0"
     
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
+    testCompile "org.grails:grails-datastore-rest-client"
     testCompile "com.github.groovy-wslite:groovy-wslite:0.7.2"
 
-    // Note: It is recommended to update to a more robust driver (Chrome, Firefox etc.)
-    testRuntime 'org.seleniumhq.selenium:selenium-htmlunit-driver:2.44.0'
+    testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
+    testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 
-    console "org.grails:grails-console"
-    
-    runtime "org.hibernate:hibernate-validator:5.0.3.Final"
-    compile 'org.grails.plugins:spring-security-core:3.0.0.M1'
-    
-    // utile pour la Prod Heroku uniquement
-    runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
-    compile 'org.eclipse.jetty:jetty-runner:9.2.11.v20150529'
-    compile 'com.github.jsimone:webapp-runner:7.0.57.2' 
+    runtime "org.hibernate:hibernate-validator:5.2.3.Final"
+    compile 'org.grails.plugins:spring-security-core:3.0.3'
     
     // Push iOS et Android
     compile "com.notnoop.apns:apns:1.0.0.Beta4"
     compile "com.ganyo:gcm-server:1.0.2"
+    
+    // Utile pour la Prod Heroku uniquement
+    runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
+    
+    // Utile en Dev/Test uniquement
+    provided "org.springframework.boot:spring-boot-starter-tomcat"
+    provided "com.h2database:h2"
 }
 
 task wrapper(type: Wrapper) {
@@ -102,13 +100,3 @@ tasks.stage.doLast() {
     delete fileTree(dir: "build/libs", exclude: "*.war")
 }
 war.mustRunAfter clean
-
-// Pour récuperer le webapp-runner que Heroku requiert et utilise comme vu dans le Procfile
-task copyToLib(type: Copy) {
-    into "$buildDir/server"
-    from(configurations.compile) {
-        include "webapp-runner*"
-    }
-}
-stage.dependsOn(copyToLib)
-
