Suite migration Grails 3.1.0

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ apply plugin: "idea"
 apply plugin: "war"
 apply plugin: "org.grails.grails-web"
 apply plugin: "org.grails.grails-gsp"
+apply plugin: "org.grails.plugins.views-json"
 
 ext {
     grailsVersion = project.grailsVersion
@@ -56,6 +57,7 @@ dependencies {
     compile "org.grails:grails-plugin-databinding"
     compile "org.grails:grails-plugin-async"
     compile "org.grails.plugins:cache"
+    compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:hibernate4"
     compile "org.hibernate:hibernate-ehcache"
     
